about section done

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,22 +1,25 @@
-
 .open-sans-normal {
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
+    font-variation-settings: "wdth"100;
+}
 
 /* shared style */
-.text-primary{
+.secondary-bg {
+    background-color: #fff8f3;
+}
+
+
+.text-primary {
     color: #FD6E0A;
 }
 
-.dark-2{
+.dark-2 {
     color: #474747;
 }
 
-.btn-primay{
+.btn-primay {
     background-color: #FD6E0A;
     font-weight: bold;
     color: white;
@@ -27,8 +30,20 @@
 
 }
 
+.section-title {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description {
+    font-size: 18px;
+    color: #757575;
+    margin: 30px 0;
+}
+
 /* header style */
-.header{
+.header {
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position: top left, bottom right;
@@ -36,29 +51,29 @@
 
 /*  Nav Styles */
 
-nav{
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 200px;
 }
 
-.nav-title{
+.nav-title {
     font-weight: 800;
     font-size: 45px;
 }
 
-nav ul{
+nav ul {
     display: flex;
     align-items: center;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
     margin-right: 50px;
 }
 
-nav li a{
+nav li a {
     text-decoration: none;
     font-size: 20px;
 
@@ -66,24 +81,67 @@ nav li a{
 
 /* banner styles */
 
-.banner{
+.banner {
     display: flex;
     justify-content: space-between;
     margin: 0 35px 0 200px;
 }
 
-.banner-content{
+.banner-content {
     max-width: 580px;
 }
-.banner-greetings{
+
+.banner-greetings {
     font-size: 45px;
     font-weight: 600;
 }
 
-.banner-title{
+.banner-title {
     font-weight: bold;
     font-size: 85px;
 }
-.banner-profile-pic{
+
+.banner-profile-pic {
     width: 580px;
+}
+
+/* main styles */
+main {
+    max-width: 1148px;
+    margin: 0 auto;
+}
+
+/* about style */
+
+.about {
+    border-radius: 15px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+    
+}
+
+.about-wrapper{
+    background-color: #fff;
+    border: 1px solid #000000;
+}
+
+
+.about-wrapper > .section-title{
+    margin: 0!important;
+}
+
+.about-items {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.item-title{
+    margin: 0 0 10px 0;
+}
+.item-description {
+    font-weight: bold;
+    margin: 0;
+
 }
