--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,12 +14,22 @@
 .text-primary {
     color: #FD6E0A;
 }
-
+.dark-1{
+    color: #181818;
+}
 .dark-2 {
     color: #474747;
 }
 
-.btn-primay {
+.dark-3 {
+    color: #757575;
+}
+
+.dark-5{
+    color: #D1D1D1;
+}
+
+.btn-primary {
     background-color: #FD6E0A;
     font-weight: bold;
     color: white;
@@ -42,6 +52,9 @@
     margin: 30px 0;
 }
 
+.text-center{
+    text-align: center;
+}
 /* header style */
 .header {
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
@@ -111,13 +124,18 @@ main {
     margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
 /* about style */
 
 .about {
     border-radius: 15px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+    
     
 }
 
@@ -144,4 +162,72 @@ main {
     font-weight: bold;
     margin: 0;
 
+}
+
+/* skills styles */
+.skills h3 {
+	margin-bottom: 0;
+}
+.skills-container{
+display: flex;
+gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    box-shadow: 0 6px 50px 0 rgba(0,0,0,0.06);
+}
+
+.skills .section-description{
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.skill-title{
+margin-top: 30px;
+margin-bottom: 20px;
+}
+
+/* resume section styles */
+.resume-container{
+display: flex;
+gap: 24px;
+}
+
+.resume-column{
+
+}
+
+.experience{
+
+}
+
+.experience-title{
+    font-size: 25px;
+    font-weight: bold;
+    color: #474747;
+    margin: 30px 0 0 0;
+
+}
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.experience-sub-title, .experience-description {
+    color: #757575;
+}
+
+.experience-description{
+
+}
+
+.resume-hr{
+    color: #D1D1D1;
+    margin: 30px 0;
+}
+
+.resume-download-cv{
+    margin-top: 50px;
 }
