--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -194,13 +194,13 @@ display: flex;
 gap: 24px;
 }
 
-.resume-column{
+/* .resume-column{
 
 }
 
 .experience{
 
-}
+} */
 
 .experience-title{
     font-size: 25px;
@@ -219,9 +219,9 @@ gap: 24px;
     color: #757575;
 }
 
-.experience-description{
+/* .experience-description{
 
-}
+} */
 
 .resume-hr{
     color: #D1D1D1;
@@ -230,4 +230,29 @@ gap: 24px;
 
 .resume-download-cv{
     margin-top: 50px;
+}
+
+/* footer styles */
+footer{
+    display: flex;
+    gap: 100px;
+    padding: 130px 230px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: #fff;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    font-size: 16px;
+    border: none;
+
 }
