about section fix

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -139,10 +139,10 @@ main section{
     
 }
 
-.about-wrapper{
+/* .about-wrapper{
     background-color: #fff;
     border: 1px solid #000000;
-}
+} */
 
 
 .about-wrapper > .section-title{
